--- a/themes/libraryresource.css
+++ b/themes/libraryresource.css
@@ -1,7 +1,7 @@
 .bookinfo{
     position: relative;
     border-bottom: 1px solid black;
-    margin: 0 0 20px 50px;
+    margin: 0 0 20px 0;
 }
 
 .book-cover{
