--- a/themes/common.css
+++ b/themes/common.css
@@ -285,14 +285,20 @@ Primary use:    Common.css file used for styling header, footer and
     text-align: center;
 }
 
+.sponsor-title-container{
+    height: 70px;
+    display: block;
+}
+
 .sponsor-title{
     display: block;
     font-weight: bold;
-    height: 40px;
+    height: 70px;
 }
 
 .sponsor-title>img{
-    height:40px;
+    width:70px;
+    height: auto;
 }
 
 @media only screen and (max-width: 340px)
