updated styling as per albany site

--- a/themes/common.css
+++ b/themes/common.css
@@ -32,6 +32,15 @@ Primary use:    Common.css file used for styling header, footer and
     background: transparent;
 }
 
+
+@font-face {
+    font-family: 'PublicSans';
+    src: 
+         url('https://www.albany.edu/communicationsmarketing/assets/fonts/publicsans/PublicSans-ExtraLight.woff2') format('woff2'), /* Super Modern Browsers */
+         url('https://www.albany.edu/communicationsmarketing/assets/fonts/publicsans/PublicSans-ExtraLight.woff') format('woff'), /* Pretty Modern Browsers */
+         url('https://www.albany.edu/communicationsmarketing/assets/fonts/publicsans/PublicSans-ExtraLight.ttf')  format('truetype'); /* Safari, Android, iOS */
+  }
+
 .buffer {
     height: 100px;
     width: 100%;
@@ -135,7 +144,7 @@ Primary use:    Common.css file used for styling header, footer and
 }
 
 .email-link{
-    color: cornflowerblue;
+    color: #46166C;
     text-decoration: underline;
 }
 
@@ -161,9 +170,17 @@ Primary use:    Common.css file used for styling header, footer and
 .main-content {
     color: #333333;
     font-size: 20px;
-    font-family: 'News Cycle', Helvetica, Arial, sans-serif;
+     font-family: 'PublicSans', sans-serif!important;
     line-height: 26px;
     padding-bottom: 30px;
+}
+
+a {
+    color: #46166C;
+}
+
+a:hover {
+    color: #46166C;
 }
 
 #navbar-header {
