--- a/themes/home.css
+++ b/themes/home.css
@@ -31,3 +31,11 @@ Primary use:    home.css file used for styling home page
     color: #46166C;
     font-weight: bold;
 }
+
+.main-content {
+    color: #444;
+    font-size: 22px;
+    font-family: 'PublicSans', sans-serif!important;;
+    line-height: 26px;
+    padding-bottom: 30px;
+}
